@@ -1,15 +1,0 @@
-#!/bin/sh
-#
-# $Id: reconf,v 1.5 2008-12-31 20:35:46 bagder Exp $
-#
-# re autoconf/automake shell script
-#
-
-die(){
-	echo "$@" ; exit
-}
-
-aclocal -I . -I m4 || die "The command 'aclocal -I . -I m4' failed"
-autoheader   || die "The command 'autoheader' failed"
-automake     || die "The command 'automake' failed"
-autoconf     || die "The command 'autoconf' failed"
